kubernetes/apps/security/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: security
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames:
    - "auth.ewatkins.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=31449600; includeSubDomains"
      backendRefs:
        - name: authentik-server
          port: 80
